Remove deprecated `new URL` constructor invocation (#344)
The `new URL` constructors have been [deprecated in Java
20](https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/net/URL.html#constructor-deprecation).

Changes:
- Simple URLs:
- `new URL("https://example.org")` ->
`URI.create("https://example.org").toURL()`
- Files:
- ["Applications working with file paths and file URIs should take great
care to use the appropriate methods to convert between the
two"](https://docs.oracle.com/en/java/javase/20/docs/api/java.base/java/net/URL.html#constructor-deprecation:~:text=file%20paths%20and%20file%20URIs)
- `new URL("file:///somefile.jar")` ->
`Paths.get("somefile.jar").toUri().toURL()`
- `MapResourceClassLoaderTest`:
- URL segment never used (leftover when duplicated from
`JetClassLoaderTest`), removed
- `java.net.URL.URL(String, String, int, String, URLStreamHandler)`:
- I **haven't updated** this more complicated constructor as I'm unsure
of the exact `new URI` equivalent and can't find test coverage to assert
the change functions effectively
GitOrigin-RevId: fdf1e3d77036aba3ab98bc428a01db8dbc1cc226