@@ -40,7 +40,7 @@ import javax.xml.validation.Validator;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.ArrayList;
 
 import static com.hazelcast.internal.nio.IOUtil.closeResource;
@@ -132,7 +132,7 @@ public abstract class AbstractXmlConfigHelper extends AbstractConfigBuilder {
         // is URL
         if (inputStream == null) {
             try {
-                inputStream = new URL(schemaLocation).openStream();
+                inputStream = URI.create(schemaLocation).toURL().openStream();
             } catch (Exception e) {
                 throw new InvalidConfigurationException("Your xsd schema couldn't be loaded");
             }
