@@ -22,6 +22,7 @@ import com.hazelcast.config.UrlXmlConfig;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import static com.hazelcast.internal.util.EmptyStatement.ignore;
@@ -86,8 +87,8 @@ public final class ConfigLoader {
 
     private static URL asURL(final String path) {
         try {
-            return new URL(path);
-        } catch (MalformedURLException ignored) {
+            return URI.create(path).toURL();
+        } catch (IllegalArgumentException | MalformedURLException ignored) {
             ignore(ignored);
         }
         return null;
