@@ -32,6 +32,7 @@ import org.junit.runner.RunWith;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Paths;
 import java.util.Collection;
@@ -107,7 +108,7 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addJarWithUrl() throws Exception {
         // Given
         String resourceId = "jarfile";
-        URL url = new URL("http://site/path/to/" + resourceId);
+        URL url = URI.create("http://site/path/to/" + resourceId).toURL();
 
         // When
         config.addJar(url);
@@ -122,7 +123,7 @@ public class ResourceConfigTest extends JetTestSupport {
     @Test
     public void when_addJarWithUrlNoPath_then_throwsException() throws Exception {
         // Given
-        URL url = new URL("http://hazelcast.org");
+        URL url = URI.create("http://hazelcast.org").toURL();
 
         // Then
         expectedException.expect(IllegalArgumentException.class);
@@ -135,8 +136,8 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addDuplicateJarWithUrl_then_throwsException() throws Exception {
         // Given
         String resourceId = "file";
-        URL url1 = new URL("http://site/" + resourceId);
-        URL url2 = new URL("http://another.site/" + resourceId);
+        URL url1 = URI.create("http://site/" + resourceId).toURL();
+        URL url2 = URI.create("http://another.site/" + resourceId).toURL();
         config.addJar(url1);
 
         // Then
@@ -244,7 +245,7 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addZipOfJarWithUrl() throws Exception {
         // Given
         String resourceId = "zipFile";
-        URL url = new URL("http://path/to/" + resourceId);
+        URL url = URI.create("http://path/to/" + resourceId).toURL();
 
         // When
         config.addJarsInZip(url);
@@ -259,7 +260,7 @@ public class ResourceConfigTest extends JetTestSupport {
     @Test
     public void when_addZipOfJarWithUrlNoPath_then_throwsException() throws Exception {
         // Given
-        URL url = new URL("http://hazelcast.org");
+        URL url = URI.create("http://hazelcast.org").toURL();
 
         // Then
         expectedException.expect(IllegalArgumentException.class);
@@ -272,8 +273,8 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addDuplicateZipOfJarWithUrl_then_throwsException() throws Exception {
         // Given
         String resourceId = "zipfile";
-        URL url1 = new URL("http://site/" + resourceId);
-        URL url2 = new URL("http://another.site/" + resourceId);
+        URL url1 = URI.create("http://site/" + resourceId).toURL();
+        URL url2 = URI.create("http://another.site/" + resourceId).toURL();
         config.addJarsInZip(url1);
 
         // Then
@@ -529,7 +530,7 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addResourceWithURL() throws Exception {
         // Given
         String resourceId = "my.txt";
-        URL url = new URL("http://site/" + resourceId);
+        URL url = URI.create("http://site/" + resourceId).toURL();
 
         // When
         config.addClasspathResource(url);
@@ -545,8 +546,8 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addDuplicateResourceWithUrl_then_throwsException() throws Exception {
         // Given
         String resourceId = "my.txt";
-        URL url1 = new URL("http://site/" + resourceId);
-        URL url2 = new URL("http://another.site/" + resourceId);
+        URL url1 = URI.create("http://site/" + resourceId).toURL();
+        URL url2 = URI.create("http://another.site/" + resourceId).toURL();
         config.addClasspathResource(url1);
 
         // Then
@@ -559,7 +560,7 @@ public class ResourceConfigTest extends JetTestSupport {
     @Test
     public void when_addResourceWithUrlNoPath_then_throwsException() throws Exception {
         // Given
-        URL url = new URL("http://hazelcast.org");
+        URL url = URI.create("http://hazelcast.org").toURL();
 
         // Then
         expectedException.expect(IllegalArgumentException.class);
@@ -587,7 +588,7 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_addResourceWithURLAndId() throws Exception {
         // Given
         String resourceId = "resourceId";
-        URL url = new URL("http://site/my.txt");
+        URL url = URI.create("http://site/my.txt").toURL();
 
         // When
         config.addClasspathResource(url, resourceId);
@@ -603,7 +604,7 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_attachFileWithUrl() throws Exception {
         // Given
         String resourceId = "resourceId";
-        URL url = new URL("http://site/" + resourceId);
+        URL url = URI.create("http://site/" + resourceId).toURL();
 
         // When
         config.attachFile(url);
@@ -619,8 +620,8 @@ public class ResourceConfigTest extends JetTestSupport {
     public void when_attachDuplicateFileWithUrl_then_throwsException() throws Exception {
         // Given
         String resourceId = "resourceId";
-        URL url1 = new URL("http://site/" + resourceId);
-        URL url2 = new URL("http://another.site/" + resourceId);
+        URL url1 = URI.create("http://site/" + resourceId).toURL();
+        URL url2 = URI.create("http://another.site/" + resourceId).toURL();
         config.attachFile(url1);
 
         // Then
@@ -633,7 +634,7 @@ public class ResourceConfigTest extends JetTestSupport {
     @Test
     public void when_attachFileWithUrlNoPath_then_throwsException() throws Exception {
         // Given
-        URL url = new URL("http://hazelcast.org");
+        URL url = URI.create("http://hazelcast.org").toURL();
 
         // Then
         expectedException.expect(IllegalArgumentException.class);
